// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loginUser returns actions dispatches LOG_IN_FULFILLED  with correct creds 1`] = `
[
  {
    "payload": "thisIsATestToken",
    "type": "LOG_IN_FULFILLED",
  },
]
`;

exports[`loginUser returns actions dispatches LOG_IN_REJECTED  with incorrect creds 1`] = `
[
  {
    "payload": "incorrect creds",
    "type": "LOG_IN_REJECTED",
  },
]
`;

exports[`updateUser returns actions handles empty name 1`] = `
{
  "payload": {
    "name": "",
  },
  "type": "UPDATE_USER",
}
`;

exports[`updateUser returns actions handles empty object 1`] = `
{
  "payload": {},
  "type": "UPDATE_USER",
}
`;

exports[`updateUser returns actions returns an action 1`] = `
{
  "payload": {
    "name": "test name",
  },
  "type": "UPDATE_USER",
}
`;
